--- a/app/views/songs/new.hmtl.erb
+++ b/app/views/songs/new.hmtl.erb
@@ -1,8 +1,8 @@
 <%= form_for @song do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
+  <%= f.label :release_year %>
+  <%= f.text_field :release_year %>
   <%= f.label :title %>
   <%= f.text_field :title %>
   <%= f.label :title %>
