--- a/app/views/songs/new.hmtl.erb
+++ b/app/views/songs/new.hmtl.erb
@@ -3,10 +3,10 @@
   <%= f.text_field :title %>
   <%= f.label :release_year %>
   <%= f.text_field :release_year %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  <%= f.label :genre %>
+  <%= f.text_field :genre %>
   <%= f.label :title %>
   <%= f.text_field :title %>
   <%= f.submit %>
