--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,5 +1,5 @@
 <h2><%= @song.title %></h2>
 <%= @song.release_year %>
-<%= form_tag people_path(@song.id), method: "delete" %>
+<%= form_tag song_path(@song.id), method: "delete" %>
   <%= submit_tag "Delete #{@song.title}" %>
 <% end %>
