--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -7,5 +7,7 @@
   <%= f.text_field :artist_name %>
   <%= f.label :genre %>
   <%= f.text_field :genre %>
+  <%= f.label :released %>
+  <%= f.text_field :released %>
   <%= f.submit %>
 <% end %>
