--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,13 +1,13 @@
 <%= form_for @song do |f| %>
   <%= f.label :title %>
-  <%= f.text_field :title %>
+  <%= f.text_field :title, @song.title %>
   <%= f.label :release_year %>
-  <%= f.text_field :release_year %>
+  <%= f.text_field :release_year, @song.release_year %>
   <%= f.label :artist_name %>
-  <%= f.text_field :artist_name %>
+  <%= f.text_field :artist_name, @song.artist_name %>
   <%= f.label :genre %>
-  <%= f.text_field :genre %>
+  <%= f.text_field :genre, @song.genre %>
   <%= f.label :released %>
-  <%= f.text_field :released %>
+  <%= f.text_field :released, @song.released %>
   <%= f.submit %>
 <% end %>
