--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,3 +1,16 @@
+<table>
+  <thead>
+    <tr>
+      <th>Song Title</th>
+      <th>Artist</th>
+      <th>Released?</th>
+      <th>Release Year</th>
+      <th>genre</th>
+    </tr>
+  </thead>
+</table>
+
+
 <% @songs.each do |song| %>
 <%= song.title %>
 <% end %>
