automatically backed up by learn

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -5,7 +5,7 @@
       <th>Artist</th>
       <th>Released?</th>
       <th>Release Year</th>
-      <th>genre</th>
+      <th>Genre</th>
     </tr>
   </thead>
 </table>
