--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -12,10 +12,12 @@
   <tbody>
     <% @songs.each do |song| %>
     <tr>
-      <td><%= song. %></td>
+      <td><%= song.title %></td>
+      <td><%= song.artist_name %></td>
+      <td><%= song.released %></td>
+      <td><%= song.release_year %></td>
+      <td><%= song.genre %></td>
     </tr>
     <% end %>
   </tbody>
 </table>
-
-
