--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -3,6 +3,8 @@
   <%= f.text_field :title %>
   <%= f.label :release_year %>
   <%= f.text_field :release_year %>
+  <%= f.label :released %>
+  <%= f.check_box :released %>
   <%= f.label :artist_name %>
   <%= f.text_field :artist_name %>
   <%= f.label :genre %>
